service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-app
spec:
  selector:
    app: wil-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
